@@ -6,10 +6,10 @@
 
   <!ENTITY gnupg2-download-http "https://gnupg.org/ftp/gcrypt/gnupg/gnupg-&gnupg2-version;.tar.bz2">
   <!ENTITY gnupg2-download-ftp  "ftp://ftp.gnupg.org/gcrypt/gnupg/gnupg-&gnupg2-version;.tar.bz2">
-  <!ENTITY gnupg2-md5sum        "b02a42dbdeea681f7afbf84db88f7479">
-  <!ENTITY gnupg2-size          "5.7 MB">
-  <!ENTITY gnupg2-buildsize     "125 MB (with makeinfo docs, add 9 MB for tests)">
-  <!ENTITY gnupg2-time          "0.7 SBU (with makeinfo docs, add 1.0 SBU for tests)">
+  <!ENTITY gnupg2-md5sum        "c67f908b0b35c7ebc62144f362757e1e">
+  <!ENTITY gnupg2-size          "6.0 MB">
+  <!ENTITY gnupg2-buildsize     "106 MB (with makeinfo docs)">
+  <!ENTITY gnupg2-time          "0.8 SBU (with makeinfo docs, add 1.1 SBU for tests)">
 ]>
 
 <sect1 id="gnupg2" xreflabel="GnuPG-&gnupg2-version;">
@@ -116,6 +116,12 @@
 
 <screen><userinput>sed -e '/noinst_SCRIPTS = gpg-zip/c sbin_SCRIPTS += gpg-zip' \
     -i tools/Makefile.in</userinput></screen>
+
+    <para>Some tests will hang infinately.  If you will run the tests, comment
+    the failing portions of the tess:</para>
+
+<screen><userinput>sed -i -e '/^  test_agent_protect/s:^://:' agent/t-protect.c &amp;&amp;
+sed -i -e '174,186 s/^/;;/'                tests/openpgp/ecc.scm</userinput></screen>
 
     <para>Install <application>GnuPG</application> by running the following
     commands:</para>
