@@ -6,7 +6,7 @@
 
   <!ENTITY feh-download-http "http://feh.finalrewind.org/feh-&feh-version;.tar.bz2">
   <!ENTITY feh-download-ftp  " ">
-  <!ENTITY feh-md5sum        "2427d49839ca49f8349f96473e862898">
+  <!ENTITY feh-md5sum        "6a75eef6dbf539bacadfa341d490ac0d">
   <!ENTITY feh-size          "2.0 MB">
   <!ENTITY feh-buildsize     "5.3 MB (with tests)">
   <!ENTITY feh-time          "less than 0.1 SBU (with tests)">
